Fix navigation mobile device

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -77,9 +77,6 @@ header table {
 #logo {
     width:20%;
 }
-#navigation {
-    width:80%;
-}
 #magnify {
     width:100vw;
     height:100vh;
@@ -119,7 +116,7 @@ header table {
 #navigation a {
     color:inherit;
     text-decoration:none;
-    padding:5px 10px;
+    padding:3px 5px;
     border-bottom:2px solid transparent;
     margin-left:4vw;
     font-weight: 500;
